<resources>
    <string name="app_name">InClass05</string>
    <string name="add">Add Movie</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete Movie</string>
    <string name="year">Show List by Year</string>
    <string name="rating">Show List by Rating</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="genre">Genre:</string>
    <string name="rate">Rating:</string>
    <string name="yearAdd">Year:</string>
    <string name="imdb">IMDB</string>
    <string name="add_movie">Add Movie</string>
    <string name="finish">Finish</string>
    <string name="save">Save Changes</string>
    <string-array name="genre">
        <item>Select genre</item>
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>
</resources>
